# cheqr

./: .gcloudignore  .gitignore  CLAUDE.md  README.md  app.yaml  db_user.py  main.py  pyproject.toml  pytest.ini  requirements.txt
assets/: postgres_db_schema.sql
output-test/: docs_sim.txt
src/project_context/: api_user.py  config.py  main.py  models.py  schemas.py  utils.py
src/project_context/ai/: models.py  service.py  utils.py
src/project_context/ai/prompts/: parse_email.txt  update_doc.txt
src/project_context/anthropic/: config.py  models.py  service.py
src/project_context/auth/: router.py  service.py  utils.py
src/project_context/costs/: models.py  router.py  schemas.py  service.py
src/project_context/datastore/: models.py  service.py
src/project_context/gcloud_secrets/: service.py
src/project_context/gmail/: models.py  service.py  utils.py
src/project_context/logging/: models.py  service.py
src/project_context/postgres/: models.py  service.py
src/project_context/projects/: models.py  router.py  schemas.py  service.py
src/project_context/static/assets/: leave.html  privacy.html  support.html  tos.html
src/project_context/templates/: costs.html
src/project_context/user/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  constants.py
tests/api/: test_cost_router.py  test_project_routes.py  test_user_routes.py
tests/gmail/: test_utils.py
tests/service/: test_cost_service.py  test_project_service.py  test_user_service.py
