[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-context"
version = "0.1.0"
description = "Project Context API"
authors = [{name = "Mark", email = "mark@vatsel.com"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "google-cloud-datastore",
    # TODO: Add other dependencies
]

[project.scripts]
api-call = "project_context.api_user:sync_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"